<resources>
    <string name="app_name">Погода</string>
    <string name="cityLabel">Город:  </string>

    <string name="tempLabel">Температура:</string>
    <string name="overcastLabel">Облачность:  </string>
    <string name="humLabel">Влажность:  </string>
    <string name="pressureLabel">Давление:  </string>
    <string name="windLabel">Скорость ветра:  </string>

    <string name="checkBoxOvercast">Облачность</string>
    <string name="checkBoxHumidity">Влажность</string>
    <string name="checkBoxPressure">Давление</string>
    <string name="checkBoxWind">Скорость ветра</string>

    <string name="tempValue">21 \u2103</string>
    <string name="humValue">75%</string>
    <string name="pressureValue">760мм</string>
    <string name="windValue">5 &#8211; 7 м/с</string>
    <string name="cityLabel2">Город</string>
    <string name="cityHelp">Введите имя города</string>
    <string name="to_second_activity">К погоде</string>
    <string name="empty">Empty</string>
    <string name="action_settings">Settings</string>
    <string name="Exec">Применить</string>
    <string name="addDay">Показать еще день</string>
    <string name="filter_edit">Настройки фильтров</string>
    <string name="goTo">Перейти</string>
    <string name="menu_setting">Настройки отображения</string>
    <string name="menu_server_change">Сменить сервер</string>
    <string name="menu_city_const">Добавить текущий город в список</string>
    <string name="menu_exit">Выход</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">О разработчике</string>
    <string name="menu_gallery">К списку городов</string>
    <string name="menu_send">Форма обратной связи</string>
    <string name="about">Тестовое приложение</string>

    <string name="hello_blank_fragment">Не стреляйте в пианиста, играет как умеет!</string>
    <string name="send">Послать</string>
    <string name="feedback">Благодарность!</string>
    <string name="SensorLabel">Сенсоры</string>
    <string name="temp_not_support">Temp not support</string>
    <string name="hum_not_support">Hum not support</string>
    <string name="developerPhone">+79166034927</string>


</resources>
