<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_setting"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"
        android:title="@string/menu_setting"/>

    <item
        android:id="@+id/menu_server_change"
        android:orderInCategory="20"
        android:title="@string/menu_server_change"/>
    <item
        android:id="@+id/menu_city_const"
        android:orderInCategory="30"
        android:title="@string/menu_city_const"/>
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="40"
        android:title="@string/menu_exit" />
</menu>
